--- a/public/style.css
+++ b/public/style.css
@@ -32,10 +32,11 @@
   content: '';
   position: absolute;
   bottom: -3px;
-  background: #000;
-  height: 2px;
+  background-image: linear-gradient(to bottom right, rgb(249, 34, 34), rgb(57, 37, 244));
+  height: 3px;
   width: 100%;
   left: 0;
+  border-radius: 50px;
   transition: all 0.5s ease-in-out;
   transform: scaleX(0);
 }
